After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 327547 - [patch] bi-weekly didn't carry over to the advanced page
[patch] bi-weekly didn't carry over to the advanced page
Status: VERIFIED FIXED
Product: GnuCash
Classification: Other
Component: Scheduled Transactions
git-master
Other All
: Normal normal
: ---
Assigned To: Josh Sled
Josh Sled
Depends on:
Blocks:
 
 
Reported: 2006-01-18 16:04 UTC by Christian Stimming
Modified: 2018-06-29 20:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Stimming 2006-01-18 16:04:53 UTC
Copying patch from gnucash-devel so that it doesn't get lost. Original msg was https://lists.gnucash.org/pipermail/gnucash-devel/2005-August/013483.html

hey all, 
    The wife and myself have been using gnucash for almost a year now
to keep track of the finances.  I noticed bi-weekly didn't carry over
to the advanced page like I expected, so I decided to get off my duff
and actually dig in to the code to fix it.  It's a little bit of a lit
down to submit a one line define change, but I'll find something more
to do now that I have a cvs repository checked out and a devel install
in my home area that doesn't mess with the main copy my wife uses.  The
patch was just against the standard head the hackers guide says to use
as guest   Well, here's the cvs diff -u.  CC me for any replys incase
the devel subscribe didn't take.


--- src/gnome/dialog-sx-from-trans.c    27 Aug 2004 22:07:10 -0000     
1.31
+++ src/gnome/dialog-sx-from-trans.c    9 Aug 2005 04:16:19 -0000
@@ -318,7 +318,7 @@
     tmpfs = xaccFreqSpecMalloc( gnc_get_current_book() );
     xaccFreqSpecSetComposite( fs );
     xaccFreqSpecSetWeekly( tmpfs, date, 2 );
-    xaccFreqSpecSetUIType( fs, UIFREQ_WEEKLY );
+    xaccFreqSpecSetUIType( fs, UIFREQ_BI_WEEKLY );
     xaccFreqSpecCompositeAdd( fs, tmpfs );
     break;
Comment 1 Josh Sled 2006-01-18 18:02:26 UTC
Fixed in r12841.
Comment 2 John Ralls 2018-06-29 20:55:20 UTC
GnuCash bug tracking has moved to a new Bugzilla host. This bug has been copied to https://bugs.gnucash.org/show_bug.cgi?id=327547. Please update any external references or bookmarks.