Propgate bi-weekly ui-frequency in transition from "schedule transaction" dialog to "Advanced..." (Scheduled Transaction Editor). 2006-01-18  Joshua Sled  <jsled@asynchronous.org>

* src/gnome/dialog-sx-from-trans.c (sxftd_update_fs): Propgate
	bi-weekly ui-frequency in transition from "schedule transaction"
	dialog to "Advanced..." (Scheduled Transaction Editor).
	Patch from Robert Zaleski <rzaleski81@yahoo.com>.
	<http://bugzilla.gnome.org/show_bug.cgi?id=327547>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/trunk@12841 57a11ea4-9604-0410-9ed3-97b8803252fd